tests/ui/const-generics/mgca/selftyparam.stderr
error: generic parameters may not be used in const operations
  --> $DIR/selftyparam.rs:5:37
   |
LL |     fn foo() -> [(); const { let _: Self; 1 }];
   |                                     ^^^^
   |
   = help: add `#![feature(opaque_generic_const_args)]` to allow generic expressions as the RHS of const items

error: aborting due to 1 previous error

